extra gap fixed using minmax

--- a/style.css
+++ b/style.css
@@ -84,14 +84,16 @@ section .infos{
     display: grid;
     /*  we don't know number of colums and row it depends on display */
 
-    grid-template-columns: repeat(auto-fill, 30px);
+    /* grid-template-columns: repeat(auto-fill, 30px); */
     /* take width of each particular coloum 30 px and repeat  until filled , if any space is too small leaves it */ /* width / 30 -> number.43 remaining 0.43 is th eamount of space that do not get filled */
-
-    grid-template-rows: repeat(auto-fill, 30px);
-
+    /* grid-template-rows: repeat(auto-fill, 30px); */
+    
+    /* space left in bttom and right will be filled ( minimum value of block will be 30px at least and can increase 1fraction maximum) reamianing space get distributed between all elements in width (for width ) and row ( for rows ) 
+    1 fraction means length remaining diveding by total elemetns in line , and this get distributed to line eleemtents */
+    grid-template-columns: repeat(auto-fill, minmax(30px, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(30px, 1fr)); 
     
 
-    
 
 }
 
